# temporian-examples

./: .gitignore  README.md  pyproject.toml
examples/: child_mind_institute.ipynb  grouped_simple_moving_average.ipynb  heart_rate_monitor.ipynb  hierarchical.ipynb
