[tool.poetry]
name = "temporian-examples"
version = "0.1.0"
description = ""
authors = ["Ian Spektor <ispektor@tryolabs.com>"]
readme = "README.md"
packages = [{ include = "temporian_examples" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
temporian = "^0.1.5"
pandas = "^2.1.1"
ipython = "^8.16.1"
ipykernel = "^6.25.2"
numpy = "^1.26.1"
polars = "^0.19.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
